project (cadt_examples C)

add_subdirectory(${CADT_SAMPLE_DIR}/bistree)
add_subdirectory(${CADT_SAMPLE_DIR}/bit)
add_subdirectory(${CADT_SAMPLE_DIR}/bitree)
add_subdirectory(${CADT_SAMPLE_DIR}/chtbl)
add_subdirectory(${CADT_SAMPLE_DIR}/clist)
add_subdirectory(${CADT_SAMPLE_DIR}/compress)
add_subdirectory(${CADT_SAMPLE_DIR}/dlist)
add_subdirectory(${CADT_SAMPLE_DIR}/encrypt)
add_subdirectory(${CADT_SAMPLE_DIR}/geometry)
add_subdirectory(${CADT_SAMPLE_DIR}/graph)
add_subdirectory(${CADT_SAMPLE_DIR}/graphalg)
add_subdirectory(${CADT_SAMPLE_DIR}/heap)
add_subdirectory(${CADT_SAMPLE_DIR}/list)
add_subdirectory(${CADT_SAMPLE_DIR}/nummeths)
add_subdirectory(${CADT_SAMPLE_DIR}/ohtbl)
add_subdirectory(${CADT_SAMPLE_DIR}/pqueue)
add_subdirectory(${CADT_SAMPLE_DIR}/queue)
add_subdirectory(${CADT_SAMPLE_DIR}/recurse)
add_subdirectory(${CADT_SAMPLE_DIR}/search)
add_subdirectory(${CADT_SAMPLE_DIR}/set)
add_subdirectory(${CADT_SAMPLE_DIR}/sort)
add_subdirectory(${CADT_SAMPLE_DIR}/stack)
